syntax = "proto3";

option csharp_namespace = "BrassLoon.Interface.WorkTask.Protos";

message GetByDomainRequest {
	string DomainId = 1;
}